# social-media

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.frontend  Dockerfile.smtpd  docker-compose.yml  smtpd_handler.py  test.py
backend/: DB_ERROR_HANDLING_SUMMARY.md  README.md  conftest.py  pyproject.toml  pytest.ini  smtp_client.py
backend/account/: models.py  routers.py  serializers.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py
backend/account/serializers/: account_serializers.py  password_serializers.py
backend/account/tests/: test_account_views.py  test_models.py  test_password_reset.py
backend/account/views/: account_views.py  password_views.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/follow/: models.py  tests.py
backend/otp/: models.py  serializers.py  serializsrs.py  services.py  urls.py  views.py
backend/otp/tests/: test_models.py  test_services.py  test_views.py
backend/photo/: models.py  routers.py  serializers.py  urls.py  views.py
backend/photo/migrations/: 0001_initial.py
backend/photo/tests/: test_models.py  test_views.py
frontend/: README.md  package.json
frontend/src/: App.js  index.css
frontend/src/components/: Dashboard.js  Login.js  PasswordChange.js  PasswordReset.js  PhotoGallery.js  PhotoUpload.js  Register.js
